fix header bar spacing in safari

--- a/docs/static/hour-of-code/2021/styles.css
+++ b/docs/static/hour-of-code/2021/styles.css
@@ -201,6 +201,10 @@ h5 {
     flex-shrink: 0;
 }
 
+.header-title {
+    white-space: nowrap;
+}
+
 .header-title:before {
     content: '';
     position: relative;
